Refactor gateway security policy